# ml-transcribe

./: .gitignore  README.md  package-lock.json  package.json  pnpm-workspace.yaml
.github/workflows/: build.yml  publish.yml
apps/TinyLlamaDemo/: ContentView.swift  Info.plist  README.md  TinyLlamaDemoApp.swift  TinyLlamaGenerator.swift
docs/: README-typescript-framework.md
scripts/: build-swift-ffi.sh  compare_mel_pipelines.py  dump_cohere_activations.py  dump_pytorch_mel_intermediates.py  train_mnist.py
src/: tensor.ts
src/native/: Cargo.toml
src/native-core/: Cargo.toml
src/native-core/src/: lib.rs  tensor.rs
src/native-core/src/io/: mod.rs  safetensors.rs
src/native-core/src/ops/: conv.rs  layout.rs  matmul.rs
src/native-swift/: Cargo.toml  rust-toolchain.toml
src/native-swift/include/: module.modulemap  transcribe_ffi.h
src/native-swift/src/: audio.rs  lib.rs
src/native/src/: lib.rs
swift/: .gitignore  Package.swift
swift/Sources/InspectModel/: main.swift
swift/Sources/Transcribe/: AudioPreprocessor.swift  CohereTranscribe.swift  CohereTranscribeWeightMap.swift  ConformerEncoder.swift  DecoderLM.swift  MLP.swift  RelPosSelfAttention.swift  Tokenizer.swift  Transcribe.swift  TransformerLayer.swift  WeightMap.swift  WhisperTiny.swift
swift/Tests/TranscribeTests/: AudioPreprocessorPerFeatureTests.swift  AudioPreprocessorTests.swift  BatchNorm1dTests.swift  CohereLayerDiffTest.swift  CohereTranscribeIntegrationTests.swift  CohereTranscribeTests.swift  ConformerEncoderTests.swift  Conv1dGroupsTests.swift  Conv1dTests.swift  Conv2dTests.swift  CrossAttentionTests.swift  DecoderLMTests.swift  EmbeddingTests.swift  F16StorageTests.swift  GLUTests.swift  GQATests.swift  KVCacheTests.swift  LayoutOpsTests.swift  MLPTests.swift  RMSNormTests.swift  RealMNISTTests.swift  RelPosSelfAttentionTests.swift  RoPETests.swift  ShardedSafetensorsTests.swift  TinyLlamaIntegrationTests.swift  TokenizerTests.swift  TranscribeTests.swift  TransformerLayerTests.swift  TransformerOpsTests.swift  WeightMapTests.swift  WhisperTinyIntegrationTests.swift
swift/Tests/TranscribeTests/Fixtures/: mnist_mlp.safetensors  mnist_samples.json
test/: ops.test.js
