[package]
name = "mni-framework-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["cpu"]
# Features propagate to mni_framework_core so the Node crate's feature
# choice determines which backend the shared core is built with.
cpu = ["mni_framework_core/cpu"]
cuda = ["mni_framework_core/cuda"]
webgpu = ["mni_framework_core/webgpu"]

[dependencies]
mni_framework_core = { path = "../native-core", default-features = false }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
# parking_lot is used directly by lib.rs for the Engine singleton.
# bytemuck, rand, rand_distr, smallvec, cudarc, wgpu, pollster moved to
# mni_framework_core's dependencies and are no longer needed here.
parking_lot = "0.12"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
